# ragoon

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
config/: comp_bin_mgtd.yaml  comp_case2024-climate.yaml  comp_case2024-climate_matrix.yaml  comp_case2024-climate_matrix_multiprompt.yaml  comp_case2024-climate_matrix_multiprompt_custom_examples.yaml  comp_case2024-climate_matrix_no_rerank.yaml  comp_case2024-climate_matrix_no_retrieval.yaml  comp_case2024-climate_matrix_with_custom_examples.yaml  example_ag_news.yaml  example_ag_news_alt_model.yaml  example_ag_news_cde.yaml  example_bin_mgtd.yaml  example_bin_mgtd_out_f.yaml  example_cnn_daily.yaml  example_dialogsum.yaml  example_imdb.yaml  example_stocks_tweets.yaml
ragoon/: __init__.py
ragoon/executors/: cde_embedder.py  embedder.py  output_writer.py  prompt_executor.py  prompt_formatter.py  reranker.py
ragoon/models/: base.py  iter_matrix.py
ragoon/test/: test_intensive.py  test_simple.py
ragoon/test/test_config/: comp_bin_mgtd.yaml  comp_case2024-climate.yaml  comp_case2024-climate_matrix.yaml  comp_case2024-climate_matrix_multiprompt.yaml  comp_case2024-climate_matrix_multiprompt_custom_examples.yaml  comp_case2024-climate_matrix_no_rerank.yaml  comp_case2024-climate_matrix_no_retrieval.yaml  comp_case2024-climate_matrix_with_custom_examples.yaml  example_ag_news.yaml  example_ag_news_alt_model.yaml  example_ag_news_cde.yaml  example_bin_mgtd.yaml  example_bin_mgtd_out_f.yaml  example_cnn_daily.yaml  example_imdb.yaml  (+2 more)
ragoon/utils/: __init__.py  config_loader.py  dataset_loader.py
(+1 files in other folders)
